Always parse pasted fragments as HTML even on XHTML pages https://bugs.webkit.org/show_bug.cgi?id=99880

Reviewed by Ojan Vafai.

Source/WebCore:

When pasting HTML into a page, using the XML parser is unlikely
to work correctly, as the contents of the clipboard are unlikely
to be properly-formed XHTML. Thus, for the pasting case, it's always
better to use HTML parsing, which will properly parse either HTML
(which is what's usually in the clipboard) or XHTML (which is
sometimes there as well).

The Mac port previously worked around this problem by falling back to plain text
when parsing failed, but switching to HTML seems like a clear improvement.

This also fixes a crash in Chromium (see http://webkit.org/b/99607
and http://crbug.com/136218); it erroneously assumed that createFragmentFromMarkup()
would never return null. This patch makes that true.

* editing/markup.cpp:
(WebCore::createFragmentFromMarkup): Don't delegate to createContextualFragment:
we already know our context element is safe (i.e., it's <body>),
and we want to force HTML (not XML) parsing.

LayoutTests:

Updated existing tests to match new expected behavior.

* editing/pasteboard/paste-noscript-xhtml-expected.txt: The HTML
parser leaves <script> tags in the DOM when pasting, but removes their
attributes and children, so this is just as safe as the previous
behavior.
* platform/mac/editing/pasteboard/paste-xml-expected.txt: Now that we
use the HTML parser, parsing the paste succeeds and so we insert DOM
instead of plain text. Similar rebaselines may be needed on other
platforms.


Canonical link: https://commits.webkit.org/118131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132211 268f45cc-cd09-0410-ab3c-d52691b4dbfc